Fix security miss of action validation feature (#607)
Signed-off-by: bowenlan-amzn <bowenlan23@gmail.com>